--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <h2>Hi, I am</h2>
                     <h1>Mary Hardy</h1>
                     <p>
-                        Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                        Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+                        society behaved moments.
                     </p>
                     <div>
                         <a class="link-btn" href="">Download CV</a>
@@ -46,6 +47,63 @@
             </div>
         </div>
     </header>
+    <Main>
+        <section class="main-section">
+            <div class="about-container">
+                <h1 class="align-center">About Me</h1>
+                <p class="color-gray align-center">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    resulfs while working with me. Delivering work within time and budget which meets clients
+                    requirements in our mata.</p>
+                <div class="card-container">
+                    <div>
+                        <p class="color-gray align-center">Name:</p>
+                        <h3 class="align-center">Mary Hardy </h3>
+                    </div>
+                    <div class="">
+                        <p class="color-gray align-center">Email:</p>
+                        <h3 class="align-center">info@gmail.com</h3>
+                    </div>
+                    <div class="">
+                        <p class="color-gray align-center">Date of birth:</p>
+                        <h3 class="align-center">11 November 1987</h3>
+                    </div>
+                    <div class="">
+                        <p class="color-gray align-center">From:</p>
+                        <h3 class="align-center">Los Angeles, USA</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="skill-heading">
+                <h1>What I do</h1>
+                <p class="color-gray">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/icons/js.png" alt="">
+                    <h2>Vanilla JavaScript</h2>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/react.png" alt="">
+                    <h2>React</h2>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h2>Node.js</h2>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h2>MongoDB</h2>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+    </Main>
 </body>
 
 </html>
