--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <section class="main-section">
             <div class="about-container">
                 <h1 class="align-center">About Me</h1>
-                <p class="color-gray align-center">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                <p class="color-gray align-center">I, m a designer & developer with a passion for web design. I enjoy
+                    developing simple, clean and slick
                     websites that provide real value to the end user. Thousands of clients have procured exceptional
                     resulfs while working with me. Delivering work within time and budget which meets clients
                     requirements in our mata.</p>
@@ -78,32 +79,121 @@
         <section class="main-section">
             <div class="skill-heading">
                 <h1>What I do</h1>
-                <p class="color-gray">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <p class="color-gray">I have more than 10 years experience building software for clients all over the
+                    world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online resume and project portfolio.</p>
             </div>
             <div class="card-container">
                 <div class="card">
                     <img src="images/icons/js.png" alt="">
                     <h2>Vanilla JavaScript</h2>
-                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
                     <img src="images/icons/react.png" alt="">
                     <h2>React</h2>
-                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
                     <img src="images/icons/nodejs.png" alt="">
                     <h2>Node.js</h2>
-                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
                     <img src="images/icons/mongo.png" alt="">
                     <h2>MongoDB</h2>
-                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="color-gray">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
+        <section class="main-section">
+            <h1 class="resume-title">A summary of My Resume</h1>
+            <div class="eduex-conatiner">
+                <div class="education-container">
+                    <h1>My Education</h1>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="experience-container">
+                    <h1>My Experience</h1>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h2>Master in Computer Engineering</h2>
+                        <h3 class="color-gray">Harvard University / 2015-2017</h3>
+                        <p class="color-gray">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cv-btn">
+                <a href="" class="link-btn">Download CV</a>
+            </div>
+        </section>
     </Main>
+    <footer class="footer-section">
+        <section class="main-section">
+            <div class="card-container">
+                <div class="contact half-width">
+                    <h1>Lets Connect</h1>
+                    <p class="contact-msg">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <img src="images/icons/facebook.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/insta.png" alt="">
+                </div>
+                <div class="message half-width">
+                    <h1>Lets Message Me</h1>
+                    <div>
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" placeholder="Your Email">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <a href="" class="link-btn">Submit</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </footer>
 </body>
 
 </html>
