image set with position css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="">Hire Me</a></li>
                 </div>
             </nav>
-            <div class="flex-container">
+            <div class="flex-container space">
                 <div class="left-info-width">
                     <h2>Hi, I am</h2>
                     <h1>Mary Hardy</h1>
@@ -42,7 +42,12 @@
                     </div>
                 </div>
                 <div class="right-info-width">
-                    <img src="images/header_bg.png" alt="">
+                    <div class="owner-bg">
+                        <img src="images/header_bg1.png" alt="">
+                    </div>
+                    <div class="owner">
+                        <img src="images/hardy.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
